--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/showyourskillz
 # Replace with your credentials
 spring.datasource.username=root
-spring.datasource.password=nitin4192
+spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
